# GetContourbyHalcon

./: CMakeLists.txt
src/: image_view.cpp  image_view.h  inspect.cpp  inspect.h  main.cpp  main_widget.cpp  main_widget.h
